--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -272,5 +272,24 @@
   "ml/s": "ميلي لتر/ الدقيقه ",
   "invalid_hatched_eggs_value": "بيض تفريخ لا يمكن ان يكون اكثر من البيض الكلي",
   "delete_account": "حذف حساب",
-  "delete_account_message": "هل انت متأكد انك تريد حذف حسابك؟"
+  "delete_account_message": "هل انت متأكد انك تريد حذف حسابك؟",
+
+
+  "live_broilers": "الدواجن الحية",
+  "egg_tray": "طبق البيض",
+  "katkot_alwadi_broilers_doc_price": "سعر كتكوت الوادي للدواجن",
+  "alaf_alwadi_price": "أسعار أعلاف الوادي",
+  "starter_feed": "علف بادئ",
+  "grower_feed": "علف نامي",
+  "finisher_feed": "علف ناهي",
+  "live_chat": "الدردشة الحية",
+  "news": "الأخبار",
+  "videos": "الفيديوهات",
+  "cb_report_generator": "مولد تقرير CB",
+  "ps_report_generator": "مولد تقرير PS",
+  "egp_ton" : "جنيه/طن",
+  "egp_kg" :"جنيه/كجم",
+  "egp" : "جنيه"
+
+
 }
