--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -297,8 +297,11 @@
   "sales_and_customer_support": "المبيعات والدعم الفني",
   "received_messages": "الرسائل المستلمة",
   "share_app": "مشاركة التطبيق",
-  "language": "اللغة"
-
-
-
+  "language": "اللغة",
+  "number_of_birds" : "مجموع الدواجن",
+  "number_of_farms" : "مجموع المزارع",
+  "number_of_houses" : "مجموع المنازل",
+  "numberOfBirds_length" : "لا يمكن ان يزيد عدد الحروف عن 50 رقمًا",
+  "numberOfFarms_length" : "لا يمكن ان يزيد عدد الحروف عن 50 رقمًا",
+  "numberOfHouses_length" : "لا يمكن ان يزيد عدد الحروف عن 50 رقمًا"
 }
