--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -294,8 +294,12 @@
   "sales_and_customer_support": "Sales & Customer Support",
   "received_messages": "Received Messages",
   "share_app": "Share App",
-  "language": "Language"
+  "language": "Language",
 
-
-
+  "number_of_birds": "Number of Birds",
+  "number_of_farms": "Number of Farms",
+  "number_of_houses": "Number of Houses",
+  "numberOfBirds_length": "The number of characters cannot exceed 50 digits",
+  "numberOfFarms_length": "The number of characters cannot exceed 50 digits",
+  "numberOfHouses_length": "The number of characters cannot exceed 50 digits"
 }
