feat: add share app function and design

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -300,7 +300,7 @@
   "language": "اللغة",
   "number_of_birds" : "مجموع الدواجن",
   "number_of_farms" : "مجموع المزارع",
-  "number_of_houses" : "مجموع المنازل",
+  "number_of_houses" : "مجموع العنابر",
   "numberOfBirds_length" : "لا يمكن ان يزيد عدد الحروف عن 50 رقمًا",
   "numberOfFarms_length" : "لا يمكن ان يزيد عدد الحروف عن 50 رقمًا",
   "numberOfHouses_length" : "لا يمكن ان يزيد عدد الحروف عن 50 رقمًا"
