feat: in app message and add comming soon label

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -308,6 +308,8 @@
   "facebook" : "الصفحة الرسمية مجموعة الوادي",
   "linkedin" : "مجموعة الوادى",
   "youtube" : "قناة كتكوت الوادي",
-    "website" : "موقع كتكوت الوادي"
+  "website" : "موقع كتكوت الوادي",
+
+  "coming_soon" : "قريبًا"
 
 }
