fix: issue when login flock size become int not string - fix localization in register screen

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -310,6 +310,7 @@
   "youtube" : "قناة كتكوت الوادي",
   "website" : "موقع كتكوت الوادي",
 
-  "coming_soon" : "قريبًا"
+  "coming_soon" : "قريبًا",
+  "indicates_required_fields" : "هذا الحقل مطلوب"
 
 }
