update: enhance videos screen design add like , share and comment

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -315,7 +315,8 @@
   "str_news" : "الاخبار",
   "wadi": "الوادي",
   "international": "دولي",
-  "local": "محلي"
+  "local": "محلي",
+    "write_comment" : "اكتب تعليقك..."
 
 
 }
