update: add latest videos section with carousel slider and update translations for Arabic and English

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -317,7 +317,8 @@
   "wadi": "الوادي",
   "international": "دولي",
   "local": "محلي",
-  "write_comment" : "اكتب تعليقك..."
+  "write_comment" : "اكتب تعليقك...",
+  "latest_videos" : "احدث الفيديوهات"
 
 
 }
