--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -318,7 +318,7 @@
   "international": "دولي",
   "local": "محلي",
   "write_comment" : "اكتب تعليقك...",
-  "latest_videos" : "احدث الفيديوهات"
-
+  "latest_videos" : "احدث الفيديوهات",
+  "mark_as_read": "تمييز كمقروء"
 
 }
