feat: add last updated in home screen , fix issues in messages screen

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -322,6 +322,8 @@
   "mark_as_read": "تمييز كمقروء",
   "confirm_deletion": "تأكيد الحذف",
   "delete_message_confirmation": "هل أنت متأكد أنك تريد حذف الرسائل المحددة؟",
-  "cancel": "إلغاء"
+  "cancel": "إلغاء",
+  "last_updated": "آخر تحديث: {}",
+  "now": "الآن"
 
 }
