feat: update notifications dropdown list and enhance message row item with attachment handling

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -328,9 +328,10 @@
   "load_more": "تحميل المزيد",
   "notifications": "الإشعارات",
   "no_notifications": "لا توجد إشعارات",
-  "hours_ago": "منذ {0} ساعات",
-  "minutes_ago": "منذ {0} دقائق",
+  "hours_ago": "منذ {} ساعات",
+  "minutes_ago": "منذ {} دقائق",
   "just_now": "الآن",
-  "yesterday": "أمس"
+  "yesterday": "أمس",
+  "attachment": "ملف مرفق"
 
 }
